Test/dafny4/git-issue159.dfy.expect
git-issue159.dfy(20,8): Error: a reads-clause expression must denote an object or a collection of objects (instead got map<MyClass, MyClass>)
git-issue159.dfy(22,8): Error: a reads-clause expression must denote an object or a collection of objects (instead got imap<MyClass, MyClass>)
git-issue159.dfy(44,11): Error: a modifies-clause expression must denote an object or a collection of objects (instead got map<MyClass, MyClass>)
git-issue159.dfy(46,11): Error: a modifies-clause expression must denote an object or a collection of objects (instead got imap<MyClass, MyClass>)
4 resolution/type errors detected in git-issue159.dfy
